# question-classification-

./: .gitignore  service_name  url.txt
src/: CMakeLists.txt  Makefile  demo.cpp
src/ai_model/: itemcls.prototxt
src/alg/: item_cls.h  problemClass.h
src/alg/include/JSON/: ParseJsonModel.cpp  ParseJsonModel.cpp.bak  ParseJsonModel.h  ParseJsonNLP.cpp  ParseJsonNLP.h  ParseJsonPHP.cpp  ParseJsonPHP.h
src/alg/include/caffe/: common.hpp
src/alg/include/caffe/gflags/: gflags-registry-entry  gflags.pc
